Bug 304004 - Setting shortcut to profiles doesn't work on first try
Summary: Setting shortcut to profiles doesn't work on first try
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.9
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-24 13:15 UTC by Marco Gulino
Modified: 2012-08-21 14:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
Proposed solution: emit signals to let model know data has changed (623 bytes, patch)
2012-07-24 17:15 UTC, Marco Gulino
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Gulino 2012-07-24 13:15:57 UTC
I had noticed this bug in different version (and distributions): arch linux, ubuntu, source compiled binaries.
I'm trying to solve myself, it seems to be related to other inconsistencies to the Profiles management.

Reproducible: Always

Steps to Reproduce:
1.Open "Settings" menu, then "Manage Profiles"
2.Click the "shortcut" column, set any keystroke (i usually set it to CTRL+Shift+1)
3.Close the dialog, then reopen it.
Actual Results:  
The keystroke was not registered

Expected Results:  
Keystroke should have been registered

A workaround to make it work: if you have more than one profile, try setting your desired shortcut, then set another shortcut to another profile
Now if you close and reopen the profiles settings dialog the second shortcut will not be registered, but the first will.
Comment 1 Marco Gulino 2012-07-24 17:15:58 UTC
Created attachment 72729 [details]
Proposed solution: emit signals to let model know data has changed

I added a patch, which emits "commitData" signal immediatly after setting the shortcut, therefore saving it.
I think it's better this way than saving on close, since this dialog has no "Ok/Cancel" button, just the close one.
Comment 2 Kurt Hindenburg 2012-07-25 02:55:16 UTC
Thanks a lot; the patch does seem to fix this issue.  I'll check it out and get it in for 4.10 (at least).
Comment 3 Kurt Hindenburg 2012-07-28 23:03:40 UTC
Git commit a8dc722aad406b97aa5f5b1aff8ac12e9c5699fd by Kurt Hindenburg.
Committed on 29/07/2012 at 01:01.
Pushed by hindenburg into branch 'master'.

Fix setting shortcuts in the Manager Profile dialog

The shortcut editor wasn't saving the input on the first try.

patch by Marco Gulino marco.gulino@gmail.com
FIXED-IN: 4.10

M  +2    -0    src/ManageProfilesDialog.cpp

http://commits.kde.org/konsole/a8dc722aad406b97aa5f5b1aff8ac12e9c5699fd
Comment 4 Kurt Hindenburg 2012-08-21 14:13:30 UTC
Git commit ef2bcfc8a35feeb846cd3049cbe5a8852e43f893 by Kurt Hindenburg.
Committed on 29/07/2012 at 01:01.
Pushed by hindenburg into branch 'KDE/4.9'.

Fix setting shortcuts in the Manager Profile dialog

The shortcut editor wasn't saving the input on the first try.

patch by Marco Gulino marco.gulino@gmail.com
FIXED-IN: 4.10
(cherry picked from commit a8dc722aad406b97aa5f5b1aff8ac12e9c5699fd)

M  +2    -0    src/ManageProfilesDialog.cpp

http://commits.kde.org/konsole/ef2bcfc8a35feeb846cd3049cbe5a8852e43f893