Fix setting shortcuts in the Manager Profile dialog

The shortcut editor wasn't saving the input on the first try.

patch by Marco Gulino marco.gulino@gmail.com

BUG: 304004
FIXED-IN: 4.10